--- a/client/src/pages/ContactUsPage/components/ContactUsSection/ContactUsSection.css
+++ b/client/src/pages/ContactUsPage/components/ContactUsSection/ContactUsSection.css
@@ -1,7 +1,26 @@
 .contact-us-section {
 	margin-bottom: 70px;
 }
+
+.contact-us-title {
+	color: var(--green17);
+}
+
 .contact-us-line {
-	background-color: var(--green17);
-	width: 50%;
+	width: 100%;
+	/* background-color: var(--green17); */
+	background-image: linear-gradient(
+		90deg,
+		hsl(113, 40%, 75%) 0%,
+		hsl(111, 26%, 67%) 25%,
+		hsl(111, 27%, 41%) 50%,
+		hsl(111, 26%, 67%) 75%,
+		hsl(113, 40%, 75%) 100%
+	);
+}
+
+@media screen and (min-width: 768px) {
+	.contact-us-line {
+		width: 90%;
+	}
 }
