--- a/client/src/pages/ServicesPage/ServicesPage.css
+++ b/client/src/pages/ServicesPage/ServicesPage.css
@@ -4,7 +4,19 @@
 }
 
 .services-page-title {
-	margin-bottom: 20px;
+	color: var(--green17);
+}
+
+.services-page-line {
+	width: 85%;
+	background-image: linear-gradient(
+		90deg,
+		hsl(113, 40%, 75%) 0%,
+		hsl(111, 26%, 67%) 25%,
+		hsl(111, 27%, 41%) 50%,
+		hsl(111, 26%, 67%) 75%,
+		hsl(113, 40%, 75%) 100%
+	);
 }
 
 .services-page-cards {
@@ -14,11 +26,6 @@
 	align-items: center;
 	gap: 20px;
 	margin: 20px 0;
-}
-
-.services-page-line {
-	background-color: var(--green07);
-	width: 80%;
 }
 
 @media screen and (min-width: 768px) {
