--- a/client/src/pages/GetInvolvedPage/components/VolunteerForm/VolunteerForm.css
+++ b/client/src/pages/GetInvolvedPage/components/VolunteerForm/VolunteerForm.css
@@ -41,9 +41,20 @@
 	resize: none;
 }
 
+.volunteer-form-submit-container {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.volunteer-form-submit-result {
+	color: var(--yellow-logo);
+	font-weight: 600;
+}
+
 .volunteer-form-submit {
-	justify-self: center;
-	padding: 4px 24px;
+	justify-self: center; /* override default grid item rule and place in the center */
+	padding: 6px 24px;
 	background-color: var(--green01);
 	color: var(--white);
 	border: 0;
@@ -55,6 +66,10 @@
 .volunteer-form-submit:hover {
 	background-color: var(--yellow-logo);
 	color: var(--black);
+}
+
+.volunteer-form-submit.disabled {
+	background-color: var(--gray05);
 }
 
 @media screen and (min-width: 768px) {
@@ -77,7 +92,7 @@
 	.volunter-form-textarea {
 		height: 160px;
 	}
-
+	.volunteer-form-submit-container,
 	.volunteer-form-submit {
 		grid-column: 1 / 3;
 		justify-self: end;
