--- a/client/src/pages/EventsPage/EventsPage.css
+++ b/client/src/pages/EventsPage/EventsPage.css
@@ -1,11 +1,62 @@
-.event-page {
+.events-page {
 	padding: 20px;
 	background-color: var(--green16);
 }
 
+.events-page-title {
+	color: var(--green17);
+}
+
+.events-page-line {
+	width: 95%;
+	/* background-color: var(--green17); */
+	background-image: linear-gradient(
+		90deg,
+		hsl(113, 40%, 75%) 0%,
+		hsl(111, 26%, 67%) 25%,
+		hsl(111, 27%, 41%) 50%,
+		hsl(111, 26%, 67%) 75%,
+		hsl(113, 40%, 75%) 100%
+	);
+}
+
+.events-form {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 10px;
+	margin-bottom: 15px;
+}
+
+.events-form-category,
+.events-form-search {
+	padding: 2px;
+	border: 1px solid hsla(0, 0%, 0%, 0.4);
+	border-radius: 4px;
+}
+
+.events-form-filter-results {
+	/* placeholder */
+}
+
+.events-cards-list-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 25px;
+}
+
 @media screen and (min-width: 768px) {
-	.event-page {
+	.events-page {
 		padding: 40px 20px;
+	}
+
+	.events-form {
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 25px;
 	}
 }
 
@@ -13,29 +64,4 @@
 	.event-page {
 		/* placeholder */
 	}
-}
-
-.event-page .search-form {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
-	gap: 5px;
-	margin-bottom: 1rem;
-}
-
-@media screen and (min-width: 768px) {
-	.event-page .search-form {
-		justify-content: center;
-		align-items: center;
-		margin-bottom: 2rem;
-	}
-}
-
-.cards-list-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
-	gap: 2rem;
 }
