--- a/client/src/pages/GetInvolvedPage/components/GetInvolvedSection/GetInvolvedSection.css
+++ b/client/src/pages/GetInvolvedPage/components/GetInvolvedSection/GetInvolvedSection.css
@@ -3,13 +3,30 @@
 	padding: 0 20px;
 }
 
+.get-involved-title {
+	color: var(--green17);
+}
+
 .get-involved-line {
-	background-color: black;
+	width: 100%;
+	/* background-color: var(--green17); */
+	background-image: linear-gradient(
+		90deg,
+		hsl(113, 40%, 75%) 0%,
+		hsl(111, 26%, 67%) 25%,
+		hsl(111, 27%, 41%) 50%,
+		hsl(111, 26%, 67%) 75%,
+		hsl(113, 40%, 75%) 100%
+	);
 }
 
 @media screen and (min-width: 768px) {
 	.get-involved-subcontainer {
 		width: 80%;
 		margin: 0 auto;
+	}
+
+	.get-involved-line {
+		width: 80%;
 	}
 }
