--- a/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerSection.css
+++ b/client/src/pages/GetInvolvedPage/components/VolunteerSection/VolunteerSection.css
@@ -2,8 +2,20 @@
 	padding: 0 20px;
 }
 
+.volunteer-title {
+	color: var(--green17);
+}
+
 .volunteer-line {
-	background-color: black;
+	width: 100%;
+	background-image: linear-gradient(
+		90deg,
+		hsl(113deg 44% 29%) 0%,
+		hsl(112deg 30% 40%) 25%,
+		hsl(112deg 24% 51%) 50%,
+		hsl(112deg 29% 63%) 75%,
+		hsl(113deg 40% 75%) 100%
+	);
 }
 
 .volunteer-image-container {
