--- a/client/src/pages/ContactUsPage/components/ContactUsForm/ContactUsForm.css
+++ b/client/src/pages/ContactUsPage/components/ContactUsForm/ContactUsForm.css
@@ -25,7 +25,7 @@
 .contact-us-form-input,
 .contact-us-form-select,
 .contact-us-form-textarea {
-	border: none;
+	border: 2px solid hsl(120, 100%, 15%);
 }
 
 .contact-us-form-input,
