--- a/client/src/pages/AboutPage/components/HistorySection/HistorySection.css
+++ b/client/src/pages/AboutPage/components/HistorySection/HistorySection.css
@@ -3,9 +3,21 @@
 	padding: 0 20px;
 }
 
+.history-title {
+	color: var(--green17);
+}
+
 .history-line {
-	background-color: black;
-	margin-bottom: 25px;
+	margin-bottom: 20px;
+	width: 100%;
+	background-image: linear-gradient(
+		90deg,
+		hsl(113deg 44% 29%) 0%,
+		hsl(112deg 30% 40%) 25%,
+		hsl(112deg 24% 51%) 50%,
+		hsl(112deg 29% 63%) 75%,
+		hsl(113deg 40% 75%) 100%
+	);
 }
 
 .history-container {
