--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -17,7 +17,10 @@
 }
 
 .card-container-content {
-	width: 280px;
+	/* ORIGINAL */
+	/* width: 280px; */
+	/* SOLUTION*/
+	width: 340px;
 }
 
 .card-container-content:hover {
@@ -49,7 +52,10 @@
 }
 
 .card-image-container-content {
-	width: 240px;
+	/* ORIGINAL */
+	/* width: 240px; */
+	/* SOLUTION*/
+	width: 300px;
 	height: 160px;
 }
 
