--- a/client/src/pages/HomePage/components/HomeEventsSection/HomeEventsSection.css
+++ b/client/src/pages/HomePage/components/HomeEventsSection/HomeEventsSection.css
@@ -1,27 +1,32 @@
 .home-events-section {
-	background: linear-gradient(
-		0deg,
-		rgba(0, 70, 67, 1) 0%,
-		rgba(172, 201, 157, 1) 100%
-	);
-	padding: 20px 0 10px 0;
+	padding: 15px 0;
+	background-color: hsl(127, 74%, 10%);
 }
 
 .home-events-title {
-	color: var(--white);
+	color: var(--green21);
 }
 
 .home-events-line {
-	background-color: var(--white);
-	width: 50%;
+	/* background-color: var(--green21); */
+	width: 80%;
+	background-image: linear-gradient(
+		90deg,
+		hsl(126deg 73% 16%) 0%,
+		hsl(116deg 22% 52%) 25%,
+		hsl(115deg 100% 90%) 50%,
+		hsl(116deg 22% 52%) 75%,
+		hsl(126deg 73% 16%) 100%
+	);
 }
 
 .home-events-container {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	gap: 10px;
-	padding: 1rem 0 1rem 0;
+	/* gap: 10px; */
+	/* padding: 1rem 0 1rem 0; */
+	background-color: var(--green01);
 }
 
 .home-events-container > :nth-child(n + 3) {
@@ -38,8 +43,4 @@
 	.home-events-container > :nth-child(n + 3) {
 		display: flex;
 	}
-}
-
-.home-events-title {
-	color: var(--white);
 }
