--- a/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardLeft/HomeEventCardLeft.css
+++ b/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardLeft/HomeEventCardLeft.css
@@ -37,6 +37,14 @@
 	flex-direction: column;
 	align-items: flex-start;
 	gap: 1rem;
+	background-image: linear-gradient(
+		300deg,
+		hsl(126, 62%, 20%) 0%,
+		hsl(125, 62%, 18%) 25%,
+		hsl(124, 62%, 16%) 50%,
+		hsl(123, 62%, 14%) 75%,
+		hsl(122, 62%, 12%) 100%
+	);
 }
 
 @media screen and (min-width: 768px) {
@@ -48,7 +56,7 @@
 }
 
 .home-event-title-left {
-	color: var(--white);
+	color: var(--green21);
 	text-decoration: none;
 	transition: 0.5s all ease-in-out;
 }
@@ -69,9 +77,10 @@
 }
 
 .home-event-date-left {
-	color: var(--white);
+	color: var(--green21);
 	align-self: flex-end;
-	background: rgba(241, 248, 243, 0.08);
+	/* background: hsla(137, 33%, 96%, 0.08); */
+	background: hsla(0, 0%, 100%, 0.12);
 	padding: 3px 7px;
 	border-radius: 25px;
 }
