--- a/client/src/pages/HomePage/components/HomeGetInvolvedSection/HomeGetInvolvedSection.css
+++ b/client/src/pages/HomePage/components/HomeGetInvolvedSection/HomeGetInvolvedSection.css
@@ -1,13 +1,33 @@
 .home-get-involved-section {
-	background: linear-gradient(0deg, hsl(108, 20%, 30%), var(--green09));
+	/* background: linear-gradient(0deg, hsl(108, 20%, 30%), var(--green09)); */
+	/* background-color: hsl(127, 74%, 10%); */
+	/* background: linear-gradient(180deg, #072c0b, #106518 25%); */
+	background-image: linear-gradient(
+		180deg,
+		hsl(126, 73%, 12%) 0%,
+		hsl(126, 60%, 40%) 100%
+	);
 	border-bottom: 6px solid var(--green12);
+	padding-top: 20px;
+	/* #08350d */
 }
 
 .home-get-involved-title {
 	text-align: center;
 	color: var(--green10);
-	margin-top: 20px;
-	margin-bottom: 20px;
+}
+
+.home-get-involved-line {
+	width: 65%;
+	/* background-color: var(--green10); */
+	background-image: linear-gradient(
+		90deg,
+		hsl(127deg 74% 12%) 0%,
+		hsl(125deg 38% 42%) 25%,
+		hsl(123deg 64% 82%) 50%,
+		hsl(125deg 38% 42%) 75%,
+		hsl(127deg 74% 12%) 100%
+	);
 }
 
 .home-get-involved-cards-container {
@@ -124,7 +144,8 @@
 }
 
 .home-get-involved-card-title:hover {
-	color: var(--white);
+	color: var(--yellow-logo);
+	filter: drop-shadow(0px 0px 2px hsl(0, 0%, 0%));
 }
 
 .home-get-involved-card-summary {
@@ -135,6 +156,25 @@
 }
 
 @media screen and (min-width: 768px) {
+	.home-get-involved-section {
+		background-image: linear-gradient(
+			180deg,
+			hsl(126, 73%, 12%) 0%,
+			hsl(126, 60%, 40%) 40%
+		);
+	}
+
+	.home-get-involved-line {
+		background-image: linear-gradient(
+			90deg,
+			hsl(127deg 63% 28%) 0%,
+			hsl(125deg 37% 52%) 25%,
+			hsl(123deg 64% 82%) 50%,
+			hsl(125deg 37% 52%) 75%,
+			hsl(127deg 63% 28%) 100%
+		);
+	}
+
 	.home-get-involved-cards-container {
 		grid-template-columns: 1fr 1fr;
 		grid-template-rows: 1fr;
