--- a/client/src/pages/HomePage/components/HomeServicesSection/components/HomeServiceCard/HomeServiceCard.css
+++ b/client/src/pages/HomePage/components/HomeServicesSection/components/HomeServiceCard/HomeServiceCard.css
@@ -8,15 +8,15 @@
 	color: inherit;
 	text-decoration: none;
 
-	background: hsla(120, 80%, 60%, 0.05);
+	background: hsla(120, 100%, 92%);
 	border-radius: 16px;
-	box-shadow: 0 2px 10px hsla(101, 38%, 15%, 0.15);
+	box-shadow: 0 2px 10px hsla(101, 38%, 15%, 0.2);
 	backdrop-filter: blur(3.5px);
 	-webkit-backdrop-filter: blur(3.5px);
 }
 
 .home-service-card:hover {
-	box-shadow: 0 2px 10px hsla(101, 38%, 15%, 0.25);
+	box-shadow: 0 2px 10px hsla(101, 38%, 15%, 0.3);
 }
 
 .home-service-card-image-container {
@@ -29,7 +29,7 @@
 	height: 100%;
 	object-fit: cover;
 	border-radius: 100%;
-	border: 4px solid var(--green10);
+	border: 3px solid hsl(113, 34%, 65%);
 }
 
 .home-service-card-title {
