--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -41,6 +41,7 @@ footer {
 	color: var(--white);
 	font-size: 14px;
 }
+
 .footer-link:hover {
 	color: var(--yellow-logo);
 }
@@ -64,6 +65,13 @@ footer {
 	color: white;
 }
 
+.footer-subscribe-info {
+	max-width: 240px;
+	color: var(--white);
+	text-align: left;
+	line-height: 1.3;
+}
+
 .footer-subscribe-form {
 	max-width: 240px;
 	display: flex;
@@ -72,11 +80,12 @@ footer {
 }
 
 .footer-subscribe-form-input {
-	padding: 2px;
+	padding: 2px 4px;
 	border: 1px solid white;
 	border-radius: 4px;
-	background-color: hsla(0, 0%, 100%, 0.15);
-	color: white;
+	/* background-color: hsla(0, 0%, 100%, 0.15); */
+	background-color: var(--green21);
+	color: black;
 }
 
 .footer-subscribe-form-button {
