--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -42,7 +42,7 @@
 	--green18: #e9ffe6;
 	--green19: #f3ffe0;
 	--green20: #39692d;
-	--green21: hsl(115, 100%, 90%);
+	--green21: #d0ffcc;
 
 	--test: #d0ffcc;
 
