--- a/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardRight/HomeEventCardRight.css
+++ b/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardRight/HomeEventCardRight.css
@@ -1,86 +1,97 @@
 .home-event-container-right {
-	display: flex;
-	flex-direction: column;
-	text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
 }
 
 @media screen and (min-width: 768px) {
-	.home-event-container-right {
-		flex-direction: row-reverse;
-		width: 50%;
-		height: 400px;
-	}
+  .home-event-container-right {
+    flex-direction: row-reverse;
+    width: 50%;
+    height: 400px;
+  }
 }
 
 .home-event-image-container-right {
-	width: 100%;
-	height: 300px;
+  width: 100%;
+  height: 300px;
 }
 
 @media screen and (min-width: 768px) {
-	.home-event-image-container-right {
-		width: 40%;
-		height: 100%;
-	}
+  .home-event-image-container-right {
+    width: 40%;
+    height: 100%;
+  }
 }
 
 .home-event-image-right {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .home-event-details-right {
-	padding: 1rem;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	gap: 1rem;
-	background-image: linear-gradient(
-		300deg,
-		hsl(126, 62%, 20%) 0%,
-		hsl(125, 62%, 18%) 25%,
-		hsl(124, 62%, 16%) 50%,
-		hsl(123, 62%, 14%) 75%,
-		hsl(122, 62%, 12%) 100%
-	);
+  padding: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  background-image: linear-gradient(
+    300deg,
+    hsl(126, 62%, 20%) 0%,
+    hsl(125, 62%, 18%) 25%,
+    hsl(124, 62%, 16%) 50%,
+    hsl(123, 62%, 14%) 75%,
+    hsl(122, 62%, 12%) 100%
+  );
+}
+
+.home-event-details-right:hover {
+  background-image: linear-gradient(
+    300deg,
+    hsl(122, 62%, 12%) 0%,
+    hsl(123, 62%, 14%) 25%,
+    hsl(124, 62%, 16%) 50%,
+    hsl(125, 62%, 18%) 75%,
+    hsl(126, 62%, 20%) 100%
+  );
 }
 
 @media screen and (min-width: 768px) {
-	.home-event-details-right {
-		width: 60%;
-		align-items: center;
-		justify-content: center;
-	}
+  .home-event-details-right {
+    width: 60%;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .home-event-title-right {
-	color: var(--green21);
-	text-decoration: none;
-	transition: 0.5s all ease-in-out;
+  color: var(--green21);
+  text-decoration: none;
+  transition: 0.5s all ease-in-out;
 }
 
 .home-event-container-right:hover .home-event-title-right,
 .home-event-container-right:focus .home-event-title-right {
-	color: var(--yellow-logo);
+  color: var(--yellow-logo);
 }
 
 .home-event-summary-right {
-	color: var(--white);
+  color: var(--white);
 }
 
 @media screen and (min-width: 768px) {
-	.home-event-summary-right {
-		padding: 0 7%;
-	}
+  .home-event-summary-right {
+    padding: 0 7%;
+  }
 }
 
 .home-event-date-right {
-	color: var(--green21);
-	align-self: flex-end;
-	/* background: hsla(137, 33%, 96%, 0.08); */
-	background: hsla(0, 0%, 100%, 0.12);
-	padding: 3px 7px;
-	border-radius: 25px;
+  color: var(--green21);
+  align-self: flex-end;
+  /* background: hsla(137, 33%, 96%, 0.08); */
+  background: hsla(0, 0%, 100%, 0.12);
+  padding: 3px 7px;
+  border-radius: 25px;
 }
