--- a/client/src/pages/HomePage/components/HomeServicesSection/components/HomeServiceCard/HomeServiceCard.css
+++ b/client/src/pages/HomePage/components/HomeServicesSection/components/HomeServiceCard/HomeServiceCard.css
@@ -20,7 +20,7 @@
 }
 
 .home-service-card-image-container {
-  width: 140px;
+  width: 220px;
   height: 140px;
 }
 
@@ -28,7 +28,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 30%;
+  border-radius: 1rem;
   border: 3px solid hsl(113, 34%, 65%);
 }
 
