--- a/client/src/pages/ContactUsPage/components/ContactUsForm/ContactUsForm.css
+++ b/client/src/pages/ContactUsPage/components/ContactUsForm/ContactUsForm.css
@@ -1,21 +1,21 @@
 .contact-us-form-container > p {
-	margin: 20px; /* gap below the "Fields mark with an asterisk (*) are required." */
+  margin: 20px; /* gap below the "Fields mark with an asterisk (*) are required." */
 }
 
 .contact-us-form {
-	display: grid;
-	row-gap: 15px;
-	padding: 25px 20px;
-	border-radius: 10px;
-	/* background-image: linear-gradient(
+  display: grid;
+  row-gap: 15px;
+  padding: 25px 20px;
+  border-radius: 10px;
+  /* background-image: linear-gradient(
 		45deg,
 		hsl(113, 63%, 27%) 0%,
 		hsl(113, 63%, 35%) 50%,
 		hsl(113, 63%, 27%) 100%
 	); */
 
-	background-color: hsl(115, 100%, 92%);
-	/* background-image: linear-gradient(
+  background-color: hsl(167, 55%, 53%);
+  /* background-image: linear-gradient(
 		45deg,
 		hsl(114deg 100% 94%) 0%,
 		hsl(114deg 100% 92%) 25%,
@@ -23,103 +23,107 @@
 		hsl(114deg 100% 92%) 75%,
 		hsl(114deg 100% 94%) 100%
 	); */
-	box-shadow: hsla(133, 95%, 17%, 0.16) 0px 3px 6px,
-		hsla(148, 91%, 13%, 0.23) 0px 3px 6px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .contact-us-form-group {
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .contact-us-form-label {
-	font-weight: 600;
-	/* color: var(--white); */
-	color: var(--green07);
+  font-weight: 600;
+  /* color: var(--white); */
+  color: rgb(255, 248, 146);
 }
 
 .contact-us-form-input,
 .contact-us-form-select,
 .contact-us-form-textarea {
-	border: 1px solid hsl(120, 100%, 15%);
+  border: 1px solid hsl(175, 100%, 15%);
 }
 
 .contact-us-form-input,
 .contact-us-form-select,
 .contact-us-form-textarea {
-	width: 100%;
-	padding: 6px;
-	/* background-color: var(--green21); */
-	background-color: hsl(115, 100%, 96%);
-	border-radius: 10px;
+  width: 100%;
+  padding: 6px;
+  /* background-color: var(--green21); */
+  background-color: hsl(64, 100%, 94%);
+  border-radius: 8px;
 }
 
 .contact-us-form-select {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .contact-us-form-textarea {
-	height: 96px;
-	resize: none;
+  height: 96px;
+  resize: none;
 }
 
 .contact-us-form-submit-container {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .contact-us-form-submit {
-	justify-self: center; /* override default grid item rule and place in the center */
-	padding: 6px 24px;
-	border: none;
-	border-radius: 20px;
-	background-color: var(--green01);
-	color: var(--white);
-	cursor: pointer;
-	font-weight: 600;
+  justify-self: center; /* override default grid item rule and place in the center */
+  padding: 6px 24px;
+  border: 1px solid rgb(255, 248, 146);
+  border-radius: 20px;
+  background-color: hsl(167, 55%, 53%);
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  color: var(--white);
+  cursor: pointer;
+  font-weight: 600;
+  transition: 2c;
 }
 
 .contact-us-form-submit:hover {
-	background-color: var(--yellow-logo);
-	color: var(--black);
+  background-color: rgb(255, 248, 146);
+  color: var(--black);
+  font-weight: bolder;
 }
 
 .contact-us-form-submit.disabled {
-	background-color: var(--gray05);
+  background-color: var(--gray05);
 }
 
 .contact-us-form-submit-result {
-	color: var(--yellow-logo);
-	font-weight: 600;
+  color: var(--yellow-logo);
+  font-weight: 600;
 }
 
 @media screen and (min-width: 768px) {
-	.contact-us-form-container {
-		margin: 0 auto;
-		width: 85%;
-	}
+  .contact-us-form-container {
+    margin: 0 auto;
+    width: 85%;
+  }
 
-	.contact-us-form {
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: repeat(5, auto);
-		row-gap: 25px; /* larger row-gap for Desktop */
-		column-gap: 50px; /* adjust this center column gap */
-		padding: 40px 50px; /* larger padding for Desktop */
-	}
+  .contact-us-form {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, auto);
+    row-gap: 25px; /* larger row-gap for Desktop */
+    column-gap: 50px; /* adjust this center column gap */
+    padding: 40px 50px; /* larger padding for Desktop */
+  }
 
-	.contact-us-form-message-container {
-		grid-column: 1 / 3; /* spread across both columns */
-	}
+  .contact-us-form-message-container {
+    grid-column: 1 / 3; /* spread across both columns */
+  }
 
-	.contact-us-form-textarea {
-		height: 160px; /* more height on the textarea for Desktop */
-	}
+  .contact-us-form-textarea {
+    height: 160px; /* more height on the textarea for Desktop */
+  }
 
-	.contact-us-form-submit-container,
-	.contact-us-form-submit {
-		grid-column: 1 / 3; /* spread across both columns */
-		justify-self: end; /* override default grid item rule and place at the end */
-	}
+  .contact-us-form-submit-container,
+  .contact-us-form-submit {
+    grid-column: 1 / 3; /* spread across both columns */
+    justify-self: end; /* override default grid item rule and place at the end */
+  }
 }
